# Content-factory-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
assets/music/: .gitkeep  README.md
config/: default.yaml  topics.txt
scripts/: catchup_on_login.sh  daily_run.sh  google_login_minimal.py  google_login_minimal.sh  install_automation.sh  keep_awake_evening.sh  kokoro_say.py  setup_male_voice.sh  setup_wake_schedule.sh
src/content_factory/: __init__.py  audio_mix.py  broll.py  cli.py  config.py  drive_upload.py  google_auth.py  instagram_upload.py  jobs.py  models.py  script_writer.py  video_bridge.py  voice.py  youtube_upload.py
tools/piper/: README.md
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx
video/src/compositions/: Short.tsx
