[project]
name = "content-factory"
version = "0.1.0"
description = "Local short-form content pipeline: script → voice → video → Drive / YouTube / Instagram"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "click>=8.1",
  "soundfile>=0.12",
  "numpy>=1.24",
  "edge-tts>=6.1",
  "certifi>=2024.0",
  "google-api-python-client>=2.100",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.1",
  "requests>=2.31",
]

[project.optional-dependencies]
kokoro = [
  "kokoro>=0.9.4",
  "torch",
]

[project.scripts]
content-factory = "content_factory.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
